<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">What\'s that flower?</string>

    <string translatable="false" name="cof_white">white</string>
    <string translatable="false" name="cof_yellow">yellow</string>
    <string translatable="false" name="cof_red">red</string>
    <string translatable="false" name="cof_blue">blue</string>
    <string translatable="false" name="cof_green">green</string>

    <string translatable="false" name="ph_meadows">meadows or grassland</string>
    <string translatable="false" name="ph_gardens">gardens or fields</string>
    <string translatable="false" name="ph_moorlands">moorlands or wetlands</string>
    <string translatable="false" name="ph_woodlands">woodlands or forests</string>
    <string translatable="false" name="ph_rocks">rocks or mountains</string>
    <string translatable="false" name="ph_trees">trees or bushes</string>

    <string translatable="false" name="nop_4">4 or less</string>
    <string translatable="false" name="nop_5">5</string>
    <string translatable="false" name="nop_many">Many</string>
    <string translatable="false" name="nop_bisymmetric">Bisymetric</string>

    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="pref_language">Preferred language</string>
    <string-array translatable="false" name="languages">
        <item>English</item>
        <item>Slovenčina</item>
        <item>Čeština</item>
        <item>Dansk</item>
        <item>Deutsch</item>
        <item>Español</item>
        <item>Français</item>
        <item>Hrvatski</item>
        <item>Italiano</item>
        <item>Magyar</item>
        <item>Nederlands</item>
        <item>日本語</item>
        <item>Norsk</item>
        <item>Polski</item>
        <item>Português</item>
        <item>Română</item>
        <item>Русский</item>
        <item>Slovenščina</item>
        <item>Српски / srpski</item>
        <item>Svenska</item>
        <item>Suomi</item>
        <item>Українська</item>
    </string-array>
    <string-array translatable="false" name="languagesValues">
        <item>en</item>
        <item>sk</item>
        <item>cs</item>
        <item>da</item>
        <item>de</item>
        <item>es</item>
        <item>fr</item>
        <item>hr</item>
        <item>it</item>
        <item>hu</item>
        <item>nl</item>
        <item>ja</item>
        <item>no</item>
        <item>pl</item>
        <item>pt</item>
        <item>ro</item>
        <item>ru</item>
        <item>sl</item>
        <item>sr</item>
        <item>sv</item>
        <item>fi</item>
        <item>uk</item>
    </string-array>
    <string name="change_locale">Change locale</string>
    <string name="change_locale_summary">to preferred language</string>
    <string name="propose_translation">Do not show button</string>
    <string name="propose_translation_summary">for emailing better translation / description</string>

    <string name="color_of_flower">color of flowers</string>
    <string name="color_white">white</string>
    <string name="color_yellow">yellow</string>
    <string name="color_red">red, pink</string>
    <string name="color_blue">blue, purple</string>
    <string name="color_green">green, brown, black</string>
    <string name="color_of_flower_message">What\'s the color of the flower? Choose the closest one.</string>

    <string name="habitats">habitats</string>
    <string name="habitat_meadow">meadows or grasslands</string>
    <string name="habitat_garden">gardens or fields</string>
    <string name="habitat_wetland">moorlands or wetlands</string>
    <string name="habitat_forest">woodlands or forests</string>
    <string name="habitat_rock">rocks or mountains</string>
    <string name="habitat_tree">trees or shrubs</string>
    <string name="habitat_message">What\'s around you? Identify plant\'s habitat.</string>

    <string name="number_of_petals">number of petals</string>
    <string name="petal_4">4 or less</string>
    <string name="petal_5">5</string>
    <string name="petal_many">more than 5</string>
    <string name="petal_bisymmetric">bisymmetric</string>
    <string name="number_of_petals_message">Is the flower bisymmetric? No? Then how many petals does it have?</string>

    <string name="display_info">Right one?</string>
    <string name="list_info">Pick one</string>

    <string name="plant_info">Info</string>
    <string name="plant_gallery">Gallery</string>
    <string name="plant_taxonomy">Taxonomy</string>
    <string name="plant_sources">Sources</string>
    <string name="image_desc">Plant illustration</string>
    <string name="translate_desc">Translate</string>
    <string name="email_desc">Email</string>
    <string name="email_subject_prefix">Suggestion for better translation / description of </string>

    <string name="plant_title">title</string>
    <string name="plant_height_from">Height from</string>
    <string name="plant_height_to">to</string>
    <string name="plant_flowering_from">Flowering from</string>
    <string name="plant_flowering_to">to</string>
    <string name="plant_flowers">Flowers</string>
    <string name="plant_inflorescences">Inflorescence</string>
    <string name="plant_fruits">Fruits</string>
    <string name="plant_leaves">Leaves</string>
    <string name="plant_inflorescence">Inflorescence</string>
    <string name="plant_color_of_flowers">Color of flowers</string>
    <string name="plant_number_of_petals">Number of petals</string>
    <string name="plant_sepal">Sepal</string>
    <string name="plant_leaf_shape">Leaf shape</string>
    <string name="plant_leaf_margin">Leaf margin</string>
    <string name="plant_leaf_venation">Leaf venation</string>
    <string name="plant_leaf_arrangement">Leaf arrangement</string>
    <string name="plant_stem">Stem</string>
    <string name="plant_root">Root</string>
    <string name="plant_habitat">Habitat</string>
    <string name="plant_trivia">Trivia</string>
    <string name="plant_toxicity">Toxicity</string>
    <string name="plant_herbalism">Herbalism</string>

    <string name="plant_domain">domain</string>
    <string name="plant_kingdom">kingdom</string>
    <string name="plant_subkingdom">subkingdom</string>
    <string name="plant_line">line</string>
    <string name="plant_branch">branch</string>
    <string name="plant_phylum">phylum</string>
    <string name="plant_class">class</string>
    <string name="plant_order">order</string>
    <string name="plant_family">family</string>
    <string name="plant_genus">genus</string>
    <string name="plant_species">species</string>

    <string name="close">Close</string>

    <string name="showcase_propose_title">Suggest better translation / description</string>
    <string name="showcase_propose_message">You can suggest better translation or description and send it by email.</string>
    <string name="showcase_fullscreen_title">Larger illustration</string>
    <string name="showcase_fullscreen_message">You can display illustration on full screen by clicking on it.</string>
    <string name="showcase_count_button_title">Number of filtered plants</string>
    <string name="showcase_count_button_message">When number is less than 21 press to jump directly to the list. Long press to clear filter.</string>
    <string name="showcase_taxonomy_title">Taxonomy according to APG III system</string>
    <string name="showcase_taxonomy_message">You can show / hide flower\'s taxonomy by clicking on the its name.</string>
    <string name="legend">Legend</string>
    <string name="toxicity1">poisonous plant</string>
    <string name="toxicity2">slightly poisonous plant</string>
    <string name="agpiii" translatable="false">APG III</string>
    <string name="rate_text">Author of this application is fueled by positive response from the users. Please send him some starflowers through Google Play Store.</string>
    <string name="rate_never">Never</string>
    <string name="rate_later">Later</string>
    <string name="rate">Review (Google Play)</string>
    <string name="your_text">your text</string>
</resources>
