<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03">

        <ImageView
            android:id="@+id/img_toxicity1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/email_desc"
            android:background="@drawable/toxicity1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:paddingTop="@dimen/list_padding"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_vertical"
            android:text="@string/toxicity1"
            android:paddingStart="50dp"
            android:id="@+id/toxicity1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_toxicity2"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:contentDescription="@string/email_desc"
            android:background="@drawable/toxicity2"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:paddingTop="@dimen/list_padding"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_vertical"
            android:text="@string/toxicity2"
            android:paddingStart="40dp"
            android:id="@+id/toxicity2"/>
    </LinearLayout>
</LinearLayout>