<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="5dp">

    <TextView
        android:id="@+id/rate_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/left_border"
        android:gravity="start"
        android:paddingEnd="@dimen/list_item_padding_left"
        android:paddingStart="@dimen/list_item_padding_left"
        android:text="@string/rate_text"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@drawable/left_border"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/rate_icon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/color_of_flowers"/>

        <ImageView
            android:id="@+id/rate_icon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/color_of_flowers"/>

        <ImageView
            android:id="@+id/rate_icon3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/color_of_flowers"/>

        <ImageView
            android:id="@+id/rate_icon4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/color_of_flowers"/>

        <ImageView
            android:id="@+id/rate_icon5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/color_of_flowers"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@drawable/left_border"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/btnNever"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_never"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_later"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>
