<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/plantTaxonomyLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <TableLayout android:id="@+id/tableLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

        <TableRow android:id="@+id/tableRow1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="5dip">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:id="@+id/plant_domain_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding"
                          android:textAppearance="@android:style/TextAppearance.Medium"/>

                <TextView android:id="@+id/plant_domain_value_latin"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:textStyle="italic"/>
            </LinearLayout>

            <TextView android:id="@+id/plant_domain"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom"
                      android:gravity="right"
                      android:textAppearance="@android:style/TextAppearance.Small"
                      android:text="@string/plant_domain"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow2"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="5dip">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:id="@+id/plant_kingdom_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding1"
                          android:textAppearance="@android:style/TextAppearance.Medium"/>

                <TextView android:id="@+id/plant_kingdom_value_latin"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:textStyle="italic"/>
            </LinearLayout>

            <TextView android:id="@+id/plant_kingdom"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom"
                      android:gravity="right"
                      android:textAppearance="@android:style/TextAppearance.Small"
                      android:text="@string/plant_kingdom"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow3"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="5dip">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:id="@+id/plant_subkingdom_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding2"
                          android:textAppearance="@android:style/TextAppearance.Medium"/>

                <TextView android:id="@+id/plant_subkingdom_value_latin"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:textStyle="italic"/>
            </LinearLayout>

            <TextView android:id="@+id/plant_subkingdom"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom"
                      android:gravity="right"
                      android:textAppearance="@android:style/TextAppearance.Small"
                      android:text="@string/plant_subkingdom"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow4"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="5dip">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:id="@+id/plant_line_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding3"
                          android:textAppearance="@android:style/TextAppearance.Medium"/>

                <TextView android:id="@+id/plant_line_value_latin"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:textStyle="italic"/>
            </LinearLayout>

            <TextView android:id="@+id/plant_line"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom"
                      android:gravity="right"
                      android:textAppearance="@android:style/TextAppearance.Small"
                      android:text="@string/plant_line"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow5"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="5dip">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:id="@+id/plant_branch_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding4"
                          android:textAppearance="@android:style/TextAppearance.Medium"/>

                <TextView android:id="@+id/plant_branch_value_latin"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:textStyle="italic"/>
            </LinearLayout>

            <TextView android:id="@+id/plant_branch"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom"
                      android:gravity="right"
                      android:textAppearance="@android:style/TextAppearance.Small"
                      android:text="@string/plant_branch"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow6"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="5dip">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:id="@+id/plant_phylum_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding5"
                          android:textAppearance="@android:style/TextAppearance.Medium"/>

                <TextView android:id="@+id/plant_phylum_value_latin"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:textStyle="italic"/>
            </LinearLayout>

            <TextView android:id="@+id/plant_phylum"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom"
                      android:gravity="right"
                      android:textAppearance="@android:style/TextAppearance.Small"
                      android:text="@string/plant_phylum"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow7"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="5dip">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:id="@+id/plant_cls_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding6"
                          android:textAppearance="@android:style/TextAppearance.Medium"/>

                <TextView android:id="@+id/plant_cls_value_latin"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:textStyle="italic"/>
            </LinearLayout>

            <TextView android:id="@+id/plant_cls"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom"
                      android:gravity="right"
                      android:textAppearance="@android:style/TextAppearance.Small"
                      android:text="@string/plant_class"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow8"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="5dip">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:id="@+id/plant_order_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding7"
                          android:textAppearance="@android:style/TextAppearance.Medium"/>

                <TextView android:id="@+id/plant_order_value_latin"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:textStyle="italic"/>
            </LinearLayout>

            <TextView android:id="@+id/plant_order"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom"
                      android:gravity="right"
                      android:textAppearance="@android:style/TextAppearance.Small"
                      android:text="@string/plant_order"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow9"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="5dip">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:id="@+id/plant_family_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding8"
                          android:textAppearance="@android:style/TextAppearance.Medium"/>

                <TextView android:id="@+id/plant_family_value_latin"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:textStyle="italic"/>
            </LinearLayout>

            <TextView android:id="@+id/plant_family"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom"
                      android:gravity="right"
                      android:textAppearance="@android:style/TextAppearance.Small"
                      android:text="@string/plant_family"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow10"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="5dip">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:id="@+id/plant_genus_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding9"
                          android:textAppearance="@android:style/TextAppearance.Medium"/>

                <TextView android:id="@+id/plant_genus_value_latin"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:textStyle="italic"/>
            </LinearLayout>

            <TextView android:id="@+id/plant_genus"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom"
                      android:gravity="right"
                      android:textAppearance="@android:style/TextAppearance.Small"
                      android:text="@string/plant_genus"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow11"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="5dip">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:id="@+id/plant_species_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding10"
                          android:textAppearance="@android:style/TextAppearance.Medium"/>

                <TextView android:id="@+id/plant_species_value_latin"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/taxonomy_padding"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:textStyle="italic"/>
            </LinearLayout>

            <TextView android:id="@+id/plant_species"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom"
                      android:gravity="right"
                      android:textAppearance="@android:style/TextAppearance.Small"
                      android:text="@string/plant_species"/>
        </TableRow>
    </TableLayout>
</FrameLayout>